added eslint config ,code cleaning, page refresh

--- a/assignment_application/package.json
+++ b/assignment_application/package.json
@@ -1,6 +1,7 @@
 {
   "name": "assignment_application",
   "version": "0.1.0",
+  "homepage": "/stocks",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
