--- a/assignment_application/package.json
+++ b/assignment_application/package.json
@@ -11,12 +11,12 @@
     "@mui/material": "^5.10.13",
     "@mui/styles": "^5.10.10",
     "@tanstack/react-table": "^8.5.22",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "chai": "^4.3.7",
+    "chai-enzyme": "^1.0.0-beta.1",
     "eslint": "^8.27.0",
     "material-react-table": "^1.3.6",
+    "mocha": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -29,7 +29,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "cross-env NODE_ENV=test mocha --require @babel/register --require ignore-styles src/**/**spec.js",
     "eject": "react-scripts eject",
     "lint": "eslint --ext js,jsx src",
     "lint:fix": "eslint --ext js,jsx src --fix"
@@ -51,5 +51,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.2",
+    "@babel/plugin-transform-modules-commonjs": "^7.19.6",
+    "@babel/register": "^7.18.9",
+    "babel-plugin-inline-react-svg": "^2.0.1",
+    "babel-preset-react-app-babel-7": "^4.0.2-0",
+    "cheerio": "^1.0.0-rc.12",
+    "cross-env": "^7.0.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.7",
+    "ignore-styles": "^5.0.1"
   }
 }
